# emulate-client-py

./: README.md  example.py  pyproject.toml
emulate_client/: __init__.py  client.py  main.py
examples/: bell_var.qasm  config.yaml  emulate.cpp  example.qasm  ghz.qasm  vars.json
