[project]
name = "emulate-client-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=24.10.0",
    "click>=8.1.7",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emulate_client"]

[project.scripts]
client = "emulate_client:client"
